# Intelliterm

./: .gitignore  LICENSE.txt  README.md  cspell.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-lint-test.yml  tests.yml
intelliterm/: __init__.py  chat.py  client.py  code.py  command_palette.py  config.py  console.py  constants.py  main.py  notifications.py  prompt.py  setup.py  styling.py  types.py  utils.py
tests/: test_chat.py  test_chat_prompt.py  test_command_palette.py
